# LLMfromScratch

./: 01-from-llm-to-agent.md  02-loading-a-12b-model.md  03-prompt-engineering-as-a-design.md  04-react-loop-from-scratch.md  05-dense-vs-moe.md  2.NeuralNetwork.md  Ashwini_Kumar_Resume.docx  Azure_DevOps_Study_Notes.docx  README.md  neural_network.py  neuron.md  requirements-core.txt  requirements.txt
saathi-langgraph/: .env.example  .gitignore  ARCHITECTURE.md  README.md  Scope of improvement.md  hooks.example.json  pyproject.toml  pyrightconfig.json
saathi-langgraph/.github/workflows/: ci.yml
saathi-langgraph/docs/: fastapi.md  ollama-remote.md
saathi-langgraph/docs/book/: 00-preface.md  01-python-foundations.md  02-llm-ecosystem.md  03-ollama.md  04-langchain-foundations.md  05-langgraph-core.md  06-agent-state-and-reducers.md  07-tools-and-tool-node.md  08-checkpointing-and-rollback.md  09-streaming.md  10-memory-systems.md  11-hooks-and-security.md  12-history-compaction.md  13-mcp-protocol.md  14-code-review-workflow.md  15-testing-llm-apps.md  16-configuration-12factor.md  17-cli-design.md  18-langsmith-observability.md  19-production-patterns.md  20-future-of-llms.md  README.md
saathi-langgraph/docs/fastapi-book/: README.md  ch-00-introduction.md  ch-01-first-app.md  ch-02-how-it-works.md  ch-03-path-operations.md  ch-04-pydantic-models.md  ch-05-request-response.md  ch-06-dependency-injection.md  (+9 more)
saathi-langgraph/examples/: mcp.example.json  mcp_echo_server.py
saathi-langgraph/tests/: README.md  conftest.py  helpers.py  test_compaction.py  test_config.py  test_custom_commands.py  test_diagnostics.py  test_e2e_live.py  test_git.py  test_graph.py  test_hooks.py  test_imports.py  test_logging.py  test_mcp.py  test_memory.py  test_parallel.py  test_print_mode.py  test_project_context.py  test_prompts.py  test_retry.py  test_review.py  test_snapshots.py  test_tools.py  test_usage.py
(+141 files in other folders)
