[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saathi-langgraph"
version = "1.0.0"
description = "Production-grade local coding agent built with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "aiosqlite>=0.20.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain>=0.3.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.2.0",
    "pyperclip>=1.9.0",
    "pyreadline3>=3.4.0 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
saathi = "saathi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/saathi"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.default.scripts]
start = "python -m saathi"
dev   = "python -m saathi --debug"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: Typer declares options via `typer.Option(...)` in argument defaults by design.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Pragmatic (not strict): enforce checks that catch real bugs without demanding
# exhaustive annotations on internal state dicts. Tightened over time.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
